--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html -p --open",
     "build": "parcel build"
   },
   "repository": {
